--- a/README.html
+++ b/README.html
@@ -263,10 +263,10 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="sql-databasehttpszhmhbestgithubiohellosqldb"><a href="https://zhmhbest.github.io/HelloSQLDB/">SQL Database</a></h1>
+      <h1 class="mume-header" id="sql-databasehttpszhmhbestgithubiohellosqldbreadme"><a href="https://zhmhbest.github.io/HelloSQLDB/README">SQL Database</a></h1>
 
 <blockquote>
-<p><a href="./chapter/Theory.md">&#x7406;&#x8BBA;&#x77E5;&#x8BC6;</a></p>
+<p><a href="./chapter/Theory">&#x7406;&#x8BBA;&#x77E5;&#x8BC6;</a></p>
 </blockquote>
 <h2 class="mume-header" id="%E4%B8%8B%E8%BD%BD">&#x4E0B;&#x8F7D;</h2>
 
