--- a/notes/index.html
+++ b/notes/index.html
@@ -301,6 +301,8 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <h3 class="mume-header" id="%E6%9F%A5%E6%89%BEsqlhtml%E6%9F%A5%E6%89%BE"><a href="sql.html#%E6%9F%A5%E6%89%BE">&#x67E5;&#x627E;</a></h3>
 
+<h3 class="mume-header" id="%E5%BA%94%E7%94%A8sqlhtml%E5%BA%94%E7%94%A8"><a href="sql.html#%E5%BA%94%E7%94%A8">&#x5E94;&#x7528;</a></h3>
+
 <h3 class="mume-header" id="%E4%BA%8B%E5%8A%A1sqlhtml%E4%BA%8B%E5%8A%A1"><a href="sql.html#%E4%BA%8B%E5%8A%A1">&#x4E8B;&#x52A1;</a></h3>
 
 <h2 class="mume-header" id="sql-programmingprogramminghtml"><a href="programming.html">SQL Programming</a></h2>
