--- a/notes/index.html
+++ b/notes/index.html
@@ -305,6 +305,20 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <h2 class="mume-header" id="sql-programmingprogramminghtml"><a href="programming.html">SQL Programming</a></h2>
 
+<h3 class="mume-header" id="%E5%87%BD%E6%95%B0programminghtml%E5%87%BD%E6%95%B0"><a href="programming.html#%E5%87%BD%E6%95%B0">&#x51FD;&#x6570;</a></h3>
+
+<h3 class="mume-header" id="%E5%AD%98%E5%82%A8%E8%BF%87%E7%A8%8Bprogramminghtml%E5%AD%98%E5%82%A8%E8%BF%87%E7%A8%8B"><a href="programming.html#%E5%AD%98%E5%82%A8%E8%BF%87%E7%A8%8B">&#x5B58;&#x50A8;&#x8FC7;&#x7A0B;</a></h3>
+
+<h3 class="mume-header" id="%E8%A7%A6%E5%8F%91%E5%99%A8programminghtml%E8%A7%A6%E5%8F%91%E5%99%A8"><a href="programming.html#%E8%A7%A6%E5%8F%91%E5%99%A8">&#x89E6;&#x53D1;&#x5668;</a></h3>
+
+<h3 class="mume-header" id="%E5%AE%9A%E6%97%B6%E5%99%A8programminghtml%E5%AE%9A%E6%97%B6%E5%99%A8"><a href="programming.html#%E5%AE%9A%E6%97%B6%E5%99%A8">&#x5B9A;&#x65F6;&#x5668;</a></h3>
+
+<h3 class="mume-header" id="%E5%8F%98%E9%87%8Fprogramminghtml%E5%8F%98%E9%87%8F"><a href="programming.html#%E5%8F%98%E9%87%8F">&#x53D8;&#x91CF;</a></h3>
+
+<h3 class="mume-header" id="%E6%9D%A1%E4%BB%B6%E8%AF%AD%E5%8F%A5programminghtml%E6%9D%A1%E4%BB%B6%E8%AF%AD%E5%8F%A5"><a href="programming.html#%E6%9D%A1%E4%BB%B6%E8%AF%AD%E5%8F%A5">&#x6761;&#x4EF6;&#x8BED;&#x53E5;</a></h3>
+
+<h3 class="mume-header" id="%E5%BE%AA%E7%8E%AF%E8%AF%AD%E5%8F%A5programminghtml%E5%BE%AA%E7%8E%AF%E8%AF%AD%E5%8F%A5"><a href="programming.html#%E5%BE%AA%E7%8E%AF%E8%AF%AD%E5%8F%A5">&#x5FAA;&#x73AF;&#x8BED;&#x53E5;</a></h3>
+
 
       </div>
       
