--- a/notes/index.html
+++ b/notes/index.html
@@ -295,7 +295,9 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <h3 class="mume-header" id="%E8%A1%A8%E7%AE%A1%E7%90%86sqlhtml%E8%A1%A8%E7%AE%A1%E7%90%86"><a href="sql.html#%E8%A1%A8%E7%AE%A1%E7%90%86">&#x8868;&#x7BA1;&#x7406;</a></h3>
 
-<h3 class="mume-header" id="%E7%B4%A2%E5%BC%95%E4%B8%8E%E8%A7%86%E5%9B%BEsqlhtml%E7%B4%A2%E5%BC%95%E4%B8%8E%E8%A7%86%E5%9B%BE"><a href="sql.html#%E7%B4%A2%E5%BC%95%E4%B8%8E%E8%A7%86%E5%9B%BE">&#x7D22;&#x5F15;&#x4E0E;&#x89C6;&#x56FE;</a></h3>
+<h3 class="mume-header" id="%E8%A7%86%E5%9B%BEsqlhtml%E8%A7%86%E5%9B%BE"><a href="sql.html#%E8%A7%86%E5%9B%BE">&#x89C6;&#x56FE;</a></h3>
+
+<h3 class="mume-header" id="%E7%B4%A2%E5%BC%95sqlhtml%E7%B4%A2%E5%BC%95"><a href="sql.html#%E7%B4%A2%E5%BC%95">&#x7D22;&#x5F15;</a></h3>
 
 <h3 class="mume-header" id="%E6%95%B0%E6%8D%AE%E5%A2%9E%E5%88%A0%E6%94%B9sqlhtml%E6%95%B0%E6%8D%AE%E5%A2%9E%E5%88%A0%E6%94%B9"><a href="sql.html#%E6%95%B0%E6%8D%AE%E5%A2%9E%E5%88%A0%E6%94%B9">&#x6570;&#x636E;&#x589E;&#x5220;&#x6539;</a></h3>
 
