--- a/notes/index.html
+++ b/notes/index.html
@@ -295,13 +295,13 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <h3 class="mume-header" id="%E7%94%A8%E6%88%B7%E5%8F%8A%E5%85%B6%E6%9D%83%E9%99%90%E7%AE%A1%E7%90%86dbhtml%E7%94%A8%E6%88%B7%E5%8F%8A%E5%85%B6%E6%9D%83%E9%99%90%E7%AE%A1%E7%90%86"><a href="db.html#%E7%94%A8%E6%88%B7%E5%8F%8A%E5%85%B6%E6%9D%83%E9%99%90%E7%AE%A1%E7%90%86">&#x7528;&#x6237;&#x53CA;&#x5176;&#x6743;&#x9650;&#x7BA1;&#x7406;</a></h3>
 
-<h2 class="mume-header" id="sqlsqlhtml"><a href="sql.html">SQL</a></h2>
+<h3 class="mume-header" id="%E8%A1%A8%E7%AE%A1%E7%90%86dbhtml%E8%A1%A8%E7%AE%A1%E7%90%86"><a href="db.html#%E8%A1%A8%E7%AE%A1%E7%90%86">&#x8868;&#x7BA1;&#x7406;</a></h3>
 
-<h3 class="mume-header" id="%E8%A1%A8%E7%AE%A1%E7%90%86sqlhtml%E8%A1%A8%E7%AE%A1%E7%90%86"><a href="sql.html#%E8%A1%A8%E7%AE%A1%E7%90%86">&#x8868;&#x7BA1;&#x7406;</a></h3>
+<h3 class="mume-header" id="%E8%A7%86%E5%9B%BEdbhtml%E8%A7%86%E5%9B%BE"><a href="db.html#%E8%A7%86%E5%9B%BE">&#x89C6;&#x56FE;</a></h3>
 
-<h3 class="mume-header" id="%E8%A7%86%E5%9B%BEsqlhtml%E8%A7%86%E5%9B%BE"><a href="sql.html#%E8%A7%86%E5%9B%BE">&#x89C6;&#x56FE;</a></h3>
+<h3 class="mume-header" id="%E7%B4%A2%E5%BC%95dbhtml%E7%B4%A2%E5%BC%95"><a href="db.html#%E7%B4%A2%E5%BC%95">&#x7D22;&#x5F15;</a></h3>
 
-<h3 class="mume-header" id="%E7%B4%A2%E5%BC%95sqlhtml%E7%B4%A2%E5%BC%95"><a href="sql.html#%E7%B4%A2%E5%BC%95">&#x7D22;&#x5F15;</a></h3>
+<h2 class="mume-header" id="sql-commonsqlhtml"><a href="sql.html">SQL Common</a></h2>
 
 <h3 class="mume-header" id="%E6%95%B0%E6%8D%AE%E5%A2%9E%E5%88%A0%E6%94%B9sqlhtml%E6%95%B0%E6%8D%AE%E5%A2%9E%E5%88%A0%E6%94%B9"><a href="sql.html#%E6%95%B0%E6%8D%AE%E5%A2%9E%E5%88%A0%E6%94%B9">&#x6570;&#x636E;&#x589E;&#x5220;&#x6539;</a></h3>
 
