--- a/notes/db.html
+++ b/notes/db.html
@@ -271,7 +271,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="#%E8%BD%AF%E4%BB%B6">&#x8F6F;&#x4EF6;</a>
 <ul>
 <li><a href="#%E6%95%B0%E6%8D%AE%E5%BA%93%E7%B3%BB%E7%BB%9F">&#x6570;&#x636E;&#x5E93;&#x7CFB;&#x7EDF;</a></li>
-<li><a href="#%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86">&#x6570;&#x636E;&#x5E93;&#x7BA1;&#x7406;</a></li>
+<li><a href="#%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86%E5%B7%A5%E5%85%B7">&#x6570;&#x636E;&#x5E93;&#x7BA1;&#x7406;&#x5DE5;&#x5177;</a></li>
 </ul>
 </li>
 <li><a href="#%E5%AE%89%E8%A3%85">&#x5B89;&#x88C5;</a>
@@ -349,11 +349,12 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><a href="https://downloads.mariadb.org/mariadb/">MariaDB</a></li>
 <li><a href="https://www.microsoft.com/zh-cn/sql-server/sql-server-downloads">SQL Server</a></li>
 </ul>
-<h3 class="mume-header" id="%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86">&#x6570;&#x636E;&#x5E93;&#x7BA1;&#x7406;</h3>
+<h3 class="mume-header" id="%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86%E5%B7%A5%E5%85%B7">&#x6570;&#x636E;&#x5E93;&#x7BA1;&#x7406;&#x5DE5;&#x5177;</h3>
 
 <ul>
 <li><a href="http://sqliteman.yarpen.cz/">Sqliteman</a></li>
 <li><a href="https://www.heidisql.com/download.php">HeidiSQL</a></li>
+<li><a href="https://dbeaver.io/download/">DBeaver</a></li>
 <li><a href="https://navicat.com.cn/products#navicat">Navicat Premium</a></li>
 </ul>
 <h2 class="mume-header" id="%E5%AE%89%E8%A3%85">&#x5B89;&#x88C5;</h2>
